--- a/EgitimPlatformuAI/Views/LevelScreen/LevelTableViewCell/LevelTableViewCell.xib
+++ b/EgitimPlatformuAI/Views/LevelScreen/LevelTableViewCell/LevelTableViewCell.xib
@@ -11,26 +11,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="LevelTableViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="293" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="333" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="293" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="333" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kkh-hF-Zhz">
-                        <rect key="frame" x="10" y="20" width="273" height="60"/>
+                        <rect key="frame" x="10" y="20" width="313" height="60"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intermidiate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvM-nq-k81">
-                                <rect key="frame" x="78.333333333333343" y="17.333333333333336" width="116.33333333333334" height="25.666666666666664"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
-                                <color key="textColor" name="porcelain"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="level" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvM-nq-k81">
+                                <rect key="frame" x="135.66666666666666" y="9.9999999999999982" width="41.666666666666657" height="23.333333333333329"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" name="darkBlue"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="info" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dnT-fM-cu0">
+                                <rect key="frame" x="10" y="33.333333333333336" width="293" height="18.666666666666664"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <color key="textColor" name="charcoal"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="darkBlue"/>
+                        <color key="backgroundColor" name="silver"/>
                         <constraints>
-                            <constraint firstItem="fvM-nq-k81" firstAttribute="centerY" secondItem="Kkh-hF-Zhz" secondAttribute="centerY" id="1XS-xO-WWC"/>
                             <constraint firstItem="fvM-nq-k81" firstAttribute="centerX" secondItem="Kkh-hF-Zhz" secondAttribute="centerX" id="WEM-1G-oWL"/>
+                            <constraint firstItem="dnT-fM-cu0" firstAttribute="centerX" secondItem="Kkh-hF-Zhz" secondAttribute="centerX" id="YLa-ez-OGP"/>
+                            <constraint firstAttribute="trailing" secondItem="dnT-fM-cu0" secondAttribute="trailing" constant="10" id="mMO-Y9-Ajf"/>
+                            <constraint firstItem="dnT-fM-cu0" firstAttribute="top" secondItem="fvM-nq-k81" secondAttribute="bottom" id="puK-p4-wyt"/>
+                            <constraint firstItem="fvM-nq-k81" firstAttribute="top" secondItem="Kkh-hF-Zhz" secondAttribute="top" constant="10" id="r65-oC-8NQ"/>
+                            <constraint firstItem="dnT-fM-cu0" firstAttribute="leading" secondItem="Kkh-hF-Zhz" secondAttribute="leading" constant="10" id="wax-ah-DHd"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -52,17 +62,21 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="containerView" destination="Kkh-hF-Zhz" id="sDz-q5-F1i"/>
+                <outlet property="infoLabel" destination="dnT-fM-cu0" id="1hH-cN-G59"/>
                 <outlet property="levelLabel" destination="fvM-nq-k81" id="qOC-Nx-YHn"/>
             </connections>
             <point key="canvasLocation" x="-58.778625954198468" y="19.718309859154932"/>
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="charcoal">
+            <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="darkBlue">
             <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="porcelain">
-            <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="silver">
+            <color red="0.96078431372549022" green="0.92549019607843142" blue="0.83529411764705885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
