--- a/EgitimPlatformuAI/CustomViews/CourseScreenTableViewFooter/CourseScreenHeaderFooterView.xib
+++ b/EgitimPlatformuAI/CustomViews/CourseScreenTableViewFooter/CourseScreenHeaderFooterView.xib
@@ -31,8 +31,8 @@
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" name="softBlue"/>
-            <color key="tintColor" name="softBlue"/>
+            <color key="backgroundColor" name="silver"/>
+            <color key="tintColor" name="silver"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="7K3-Ye-MsO" secondAttribute="bottom" constant="10" id="Dgv-gx-SdY"/>
                 <constraint firstAttribute="bottom" secondItem="z0P-sW-wTg" secondAttribute="bottom" constant="10" id="GES-d9-Imz"/>
@@ -53,8 +53,8 @@
         <namedColor name="charcoal">
             <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="softBlue">
-            <color red="0.8901960784313725" green="0.94901960784313721" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="silver">
+            <color red="0.96078431372549022" green="0.92549019607843142" blue="0.83529411764705885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
