--- a/EgitimPlatformuAI/Views/CourseScreen/CourseScreen.storyboard
+++ b/EgitimPlatformuAI/Views/CourseScreen/CourseScreen.storyboard
@@ -18,23 +18,23 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gY-8c-pzF">
                                 <rect key="frame" x="20" y="79" width="353" height="50"/>
-                                <color key="backgroundColor" name="mediumTurqoise"/>
+                                <color key="backgroundColor" name="charcoal"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="ImY-wo-1Pk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" name="charcoal"/>
+                                <color key="textColor" name="aliceblUE"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gsh-G3-rLQ">
-                                <rect key="frame" x="0.0" y="219" width="393" height="579"/>
+                                <rect key="frame" x="5" y="219" width="383" height="579"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="7K8-oc-Q8B">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="50" width="383" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7K8-oc-Q8B" id="U95-tU-1BQ">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -46,20 +46,20 @@
                                     <constraint firstAttribute="height" constant="50" id="xEG-wB-hUD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" name="charcoal"/>
+                                <color key="textColor" name="aliceblUE"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" name="aliceBlue"/>
+                        <color key="backgroundColor" name="darkBlue"/>
                         <constraints>
-                            <constraint firstItem="gsh-G3-rLQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="6jR-Yp-Mm4"/>
+                            <constraint firstItem="gsh-G3-rLQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="5" id="6jR-Yp-Mm4"/>
                             <constraint firstItem="YLg-VS-fru" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="7dS-TU-YuL"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="gsh-G3-rLQ" secondAttribute="bottom" constant="20" id="8eE-F0-Tbz"/>
                             <constraint firstItem="YLg-VS-fru" firstAttribute="top" secondItem="8gY-8c-pzF" secondAttribute="bottom" constant="20" id="Pc3-6w-ijE"/>
                             <constraint firstItem="8gY-8c-pzF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="ST9-8i-YNb"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8gY-8c-pzF" secondAttribute="trailing" constant="20" id="TWN-ya-AIW"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gsh-G3-rLQ" secondAttribute="trailing" id="cP4-wL-HkO"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gsh-G3-rLQ" secondAttribute="trailing" constant="5" id="cP4-wL-HkO"/>
                             <constraint firstItem="8gY-8c-pzF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="ceZ-n9-NcW"/>
                             <constraint firstItem="gsh-G3-rLQ" firstAttribute="top" secondItem="YLg-VS-fru" secondAttribute="bottom" constant="20" id="rQc-Vw-LcZ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="YLg-VS-fru" secondAttribute="trailing" constant="10" id="upP-0G-oX3"/>
@@ -77,14 +77,14 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="aliceBlue">
+        <namedColor name="aliceblUE">
             <color red="0.96078431372549022" green="0.97647058823529409" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="charcoal">
             <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="mediumTurqoise">
-            <color red="0.23137254901960785" green="0.78431372549019607" blue="0.7686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="darkBlue">
+            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
